fixed double scrollbars in designview and bottom of empty doc space in designview

--- a/public/less/branding/main.less
+++ b/public/less/branding/main.less
@@ -154,3 +154,8 @@ a.clickable {
 .float-right {
   float: right;
 }
+
+iframe[name='google_conversion_frame'] {
+    bottom: 0;
+    position: fixed;
+}
