--- a/public/less/designview/frame.less
+++ b/public/less/designview/frame.less
@@ -166,7 +166,6 @@ body.designview .mainContainer {
   min-height: 300px;
   margin: auto;
   position: relative;
-  padding-top: 20px; // needs to be the same value, as the padding-top value in DesignView.unfix()
 }
 
 
